# DaPars2

./: .coveragerc  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
src/dapars2/: DaPars2.py  DaPars2_Multi_Sample_Multi_Chr.py  DaPars_Extract_Anno.py  DaPars_filter.py  Dapars2_Multi_Sample.py  __init__.py  extract_read_depth.py  merge_apa_quant_res_by_chr.R  merge_apa_quant_res_by_chr.py  skeleton.py
tests/: conftest.py  test_skeleton.py
tests/Dapars2_Test_Dataset/: Dapars2_test_configure.txt  mapping_wig_location_with_depth.txt  sample_list.txt
tests/Dapars2_Test_Dataset/Dapars2_test_chr1/: Dapars2_result_temp.chr1.txt
tests/Dapars2_Test_Dataset/Dapars2_test_chr1/tmp/: Each_processor_3UTR_Result_1.txt  Each_processor_3UTR_Result_2.txt
